# MultiPlatform_screenCasting

./: Cargo.toml  Documentation.md  README.md  lib.rs
docs/: Guidelines.md
ffmpeg/src/: main.rs
model/src/: caster.rs  viewer.rs
network/: Cargo.toml
network/src/: main.rs
screenshare/: Cargo.toml
screenshare/src/: lib.rs  main.rs
src/: main.rs
src/capture/caster/: caster.rs
src/controller/: AppController.rs  SocketController.rs  app_controller.rs  mod.rs  receiver_controller.rs
src/gui/: app.rs  mod.rs  resource.rs
src/gui/component/: AnnotationToolsComponent.rs  caster_settings.rs  caster_streaming.rs  colorpickerWindow.rs  connection.rs  home.rs  keycodeutils.rs  mod.rs  receiver_ip.rs  receiver_streamimg.rs  receiver_streaming.rs  shorcut.rs  window_part_screen.rs
src/gui/component/Annotation/: Square.rs  mod.rs
src/gui/theme/: color_picker.rs  container.rs  icon.rs  menu.rs  mod.rs  picklist.rs  scrollable.rs  text.rs  textinput.rs  toggle_annotation.rs  widget.rs
src/gui/theme/button/: button.rs  circle_button.rs  mod.rs  rectangle_button.rs
src/model/: Display.rs  Shortcut.rs  mod.rs  shortcut.rs  test_shortcuts.json
src/screenshare/: mod.rs  screenrecording.rs  screenshare.rs
src/socket/: socket.rs
src/utils/: utils.rs
