[package]
name = "MultiPlatform_screenCasting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.9.0", features = ["tokio", "image", "svg"] }
iced_aw = { version = "0.7.0", features = ["tabs"] }
tokio =  {version = "1.15", features = ["full"] }
#iced_video_player = "0.5.0"
scrap = "0.5.0"
scap = {git="https://github.com/giuseppe2028/scap.git"}
nix = { version = "0.29.0", features = ["signal"] }
url = "2.5.2"
time = "0.3.36"
futures = "0.3.31"
rand = "0.8.5"
enigo = "0.2.1"
xcap = { git="https://github.com/giuseppe2028/xcap.git" }
serde = { version = "1.0.215", features = ["derive"] }
bincode = "2.0.0-rc.3"
serde_cbor = "0.11.2"
flate2 = "1.0"
[target.'cfg(target_os = "linux")'.dependencies]
libspa-sys = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.2"
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24" 
cocoa = "0.26.0"
mouse_position = "0.1.4"