[package]
edition = "2021"
name = "MultiPlatform_screenCasting"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
flate2 = "1.0"
futures = "0.3.31"
iced = {version = "0.12.1", features = ["tokio", "image", "svg", "multi-window"]}
iced_aw = {version = "0.7.0", features = ["tabs"]}
rand= "0.8.5"
serde = {version = "1.0.215", features = ["derive"]}
serde_json = "1.0.133"
thiserror = "2.0.6"
time = "0.3.36"
tokio = {version = "1.15", features = ["full"]}
url = "2.5.2"
xcap = {git = "https://github.com/giuseppe2028/xcap.git"}
[target.'cfg(target_os = "linux")'.dependencies]
libspa-sys = "0.8.0"
serde = {version = "1.0", features = ["derive"]}
x11 = {version = "2.21.0", features = ["xlib", "xfixes"]}
[target.'cfg(target_os = "windows")'.dependencies]
winapi = {version = "0.3", features = ["winuser"]}
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.0"
core-graphics = "0.24"
mouse_position = "0.1.4"
